--- a/android_tv_home_screen_ui/gradle.properties
+++ b/android_tv_home_screen_ui/gradle.properties
@@ -2,6 +2,7 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.daemon=false
 
 # Android
 android.useAndroidX=true
